# felisa

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  railway.toml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  CLAUDE_AI.md  PRIVACY.md  QUICKSTART.md  RAILWAY_TEMPLATE.md  TELEGRAM.md
felisa/cli/: felisa.py  mem.py
felisa/core/: agent.py  config.py  db.py  embeddings.py  hook_detection.py  models.py  pipeline.py  proposals.py  queue.py  structuring.py
felisa/core/prompts/: agent.md  hook_detect.md  structure.md
felisa/daemon/: main.py
felisa/hooks/: __init__.py  session_end.py
felisa/mcp/: oauth_provider.py  oauth_storage.py  server.py
felisa/telegram/: __init__.py  api.py  bot.py  whisper.py
scripts/: com.felisa.daemon.plist  felisa.service.template  install-daemon.sh  install.py  smoke_install_clean.sh  uninstall-daemon.sh
sql/: 001_init.sql  002_oauth_tokens.sql
tests/: test_agent.py  test_config.py  test_daemon.py  test_daemon_async.py  test_db.py  test_db_spaces.py  test_embeddings.py  test_hook_detection.py  test_install.py  test_mcp_oauth_storage.py  test_mcp_server.py  test_mem_propuestas.py  test_pipeline.py  test_proposals.py  test_queue.py  test_session_end_hook.py  test_structuring.py  test_telegram_bot.py  test_telegram_proposals.py  test_telegram_whisper.py
