[project]
name = "felisa"
version = "0.1.0"
description = "Sistema de memoria persistente para Claude"
requires-python = ">=3.12"
dependencies = [
    "python-dotenv>=1.0",
    "psycopg[binary]>=3.2",
    "psycopg-pool>=3.2",
    "pgvector>=0.3",
    "httpx>=0.27",
    "anthropic>=0.40",
    "rich>=13.7",
]

[dependency-groups]
dev = [
    "pytest>=8",
]

[project.scripts]
mem = "felisa.cli.mem:main"
felisa = "felisa.cli.felisa:main"
felisa-daemon = "felisa.daemon.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["felisa"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
