[project]
name = "felisa"
version = "0.5.0"
description = "Sistema de memoria persistente para Claude"
requires-python = ">=3.12"
dependencies = [
    "python-dotenv>=1.0",
    "psycopg[binary]>=3.2",
    "psycopg-pool>=3.2",
    "pgvector>=0.3",
    "httpx>=0.27",
    "anthropic>=0.40",
    "rich>=13.7",
    "mcp[cli]>=1.12",
    "uvicorn>=0.30",
    "starlette>=0.40",
    # Linux usa keyring para credenciales (Secret Service / KWallet / encrypted file).
    # macOS usa el binario `security` directo (mas rapido, ya disponible).
    "keyring>=25; sys_platform == 'linux'",
]

[project.scripts]
mem = "felisa.cli.mem:main"
felisa = "felisa.cli.felisa:main"
felisa-daemon = "felisa.daemon.main:main"
felisa-mcp-server = "felisa.mcp.server:main"
felisa-hook-session-end = "felisa.hooks.session_end:main"

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "ruff>=0.6",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["felisa"]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = [".claude", ".venv", "build", "dist"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]  # line too long: convivimos con strings/docstrings largos
